# music

./: .gitignore  2562095675.ly  2574411984.ly  715484828.ly  Ey_NHZNYTeE.ja.vtt  Ey_NHZNYTeE.lrc  Makefile  andante.ly  example.Makefile  example.main.ly  example.more.ly  fGXCKG6o2Ow.lrc  h0FtaC_-hKQ.lrc  h0FtaC_-hKQ.zh-Hant.vtt  ly.genid.sh  ly.journal.sh  ly.journal.txt  ly.mk  ly.preamble.ly  ly.script.1234567.cdefgab.sh  ly.script.lilypond.sh  ly.script.pack.sh  ly.script.showcase.percussion.sh  ly.sort.sh  ly.sort.排序及標題檢索.sh  main.ly  music.bashrc  pvz_roof.ly  readme.md  readme.txt  reldb.zshrc  script_accidental.zsh  script_fluidsynth.zsh  script_frame.zsh  script_lilypond.zsh  sustain.ly  sync.sh  test.sh  youtube.bash_aliases  youtube_audio.sh  (+2 more)
8bit/: Makefile  main.c  music.sh
hangul-rr/: .gitignore  Makefile  in.txt  main.c  meson.build  sp.c  sp.h  tb.c  tb.h
lilypond/: 03_andante.ly  04_ame.ly  andante.ly  lilypond.bashrc  pvz_roof.ly
lrc.despacito/: Makefile  despacito.txt  script.seek.sh  script.txt2html.sh
lrc.hangul-rr/: main.c  tb.c
lrc.lyrics/: despacito.txt
ly.01.h8mbr3.你們要讚美耶和華/: lower.ly
ly.02.u4ze9n.恩典的記號/: Makefile
ly.03.goke8e.叫我抬起頭的神/: meta.ly  percussion.ly  upper.ly
ly.04.f3xzso.相信有愛就有奇蹟/: Makefile  meta.ly  percussion.ly  upper.ly
ly.05.fza9a8.不停讚美/: main.ly  meta.ly  upper.ly
ly.07.gd89zj.讚我天父歌/: Makefile  lower.ly  main.ly  meta.ly  upper.ly
ly.08.q0p3ai.何等恩典/: upper.ly
ly.14.up0pws.讓讚美飛揚/: Makefile  main.ly  percussion.ly
ly.ame/: .gitignore  Makefile  accompanimentfunc.ly  fluidsynth.sh  lower.ly  main.ly  (+1 more)
(+124 files in other folders)
